# advent-of-code-25

./: .env.example  .gitignore  README.md  pyproject.toml
advent_of_code/: advent.py  api.py  create.py  manage.py  run.py
advent_of_code/1/: solver.py
advent_of_code/2/: solver.py
advent_of_code/3/: solver.py
advent_of_code/4/: solver.py
advent_of_code/5/: solver.py
advent_of_code/6/: solver.py
