[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Chris <christopher.hampson58@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pytz = "^2024.2"
dotenv = "^0.9.9"


[tool.poetry.scripts]
create = "advent_of_code.manage:create"
day = "advent_of_code.manage:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
