[project]
name = "advent-of-code-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
create = "python3 advent_of_code/create.py"
day = "python3 advent_of_code/run.py"
